Fixed index.html img screen-adjust withing CSS. Stretches so face is always on screen.

--- a/assets/style.css
+++ b/assets/style.css
@@ -3,5 +3,7 @@ body {
 }
 
 img {
-    max-width: 100%;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
